re PR c/25795 (Proccessing the attribute externally_visible too early)

PR c/25795
	PR c++/27369
	* cgraph.c (cgraph_varpool_nodes): Export.
	(decide_is_variable_needed): Ignored "used" attribute in
	unit-at-a-time mode.
	* cgraph.h (cgraph_varpool_nodes): Declare.
	* cgraphunit.c (decide_is_function_needed): Ignored "used" attribute in
	unit-at-a-time mode.

	* gcc.dg/pr25795.c: New test.
	* gcc.dg/pr25795-1.c: New test.

From-SVN: r115693